# svg-parser

./: .gitignore  LICENSE  holo.cabal  stack.yaml  svg-parser.cabal
app/: Main.hs
example/: Main.hs
src/: Attributes.hs  Elements.hs  SvgParser.hs
test/: Spec.hs
