name:                svg-parser
version:             0.0.1.0
synopsis:            Simple SVG parser
description:         Please see README.md
homepage:            http://github.com/elaye/svg-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Elie Génard
maintainer:          elaye.github.io@gmail.com
copyright:           2016 Elie Génard
category:            Parser
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SvgParser
  other-modules:       Attributes
                     , Elements
  build-depends:       base >= 4.7 && < 5
                      , parsec
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , svg-parser
  default-language:    Haskell2010

test-suite svg-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , svg-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elaye/svg-parser
